--- a/.github/workflows/dev_Christoph_build.yml
+++ b/.github/workflows/dev_Christoph_build.yml
@@ -35,5 +35,5 @@ jobs:
     - name: upload
       uses: actions/upload-artifact@v3
       with:
-        name: MaintenanceMonito.jar
+        name: MaintenanceMonitor.jar
         path: staging
