--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master", "development" ]
+    branches: [ "dev_Christoph" ]
   pull_request:
-    branches: [ "master", "development" ]
+    branches: [ "dev_Christoph" ]
 
 jobs:
   build:
